--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-router": "^3.0.0"
+    "react": "^15.4.0",
+    "react-dom": "^15.4.0",
+    "react-redux": "^4.4.6",
+    "react-redux-form": "^1.2.4",
+    "react-router": "^3.0.0",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
+    "validator": "^6.1.0"
   },
   "scripts": {
     "start": "react-scripts-with-sass start",
