--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
+    "react-fontawesome": "^1.4.0",
     "react-redux": "^4.4.6",
     "react-redux-form": "^1.2.4",
     "react-router": "^3.0.0",
